--- a/index.css
+++ b/index.css
@@ -40,6 +40,11 @@ body {
   border-radius: 4vmin;
   margin: 20px 0 30px 0;
   color: #2a2934;
+  transition: 0.3s ease;
+
+  &:hover{
+    text-shadow: 0 0 45px #ffffff;
+  }
 }
 .main {
   background: rgba(154, 154, 154, 0.15);
